working in pipeline

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     env_file:
       - .env
     volumes:
-      - postgres_data_dev:/var/lib/postgresql/data
+      - postgres-data:/data
     ports:
       - "5435:5432"
     networks:
@@ -33,6 +33,9 @@ services:
     container_name: khalti_api
     networks:
       - khalti-network
+
+volumes:
+  postgres-data:
 
 networks:
   khalti-network:
