--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,4 +37,4 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         script: |
             cd /home/ubuntu/khalti
-            sudo docker-compose up -d build-deploy-khalti --build
+            sudo docker-compose up -d --build
