--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-environ==0.10.0
 django-filter==24.3
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.2.2
-rest-framework-swagger==2.0
+drf_yasg==1.21.4
 drf-yasg==1.21.4
 environ==1.0
 idna==3.10
