--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ PyJWT==2.6.0
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+whitenoise==6.5.0
 gunicorn==21.2.0
 unicorn==2.0.1
 uvicorn==0.27.0.post1
